# xui

./: .gitignore  Cargo.toml  IDEAs.md  idea.md
core/: Cargo.toml
core/dom/: Cargo.toml
core/dom/src/: lib.rs
core/examples/: basic.rs
core/src/: constraints.rs  lib.rs
core/src/rendering/: mod.rs  render_box.rs
css/: Cargo.toml
macros/: Cargo.toml
widgets/: Cargo.toml
