[workspace]

[package]
name = "xui"
version = "0.0.0"
authors = ["강동윤 <kdy1997.dev@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/kdy1/xui.git"
description = "Rust everywhere"
edition = "2018"
keywords = ["xui", "gui", "ui"]
autotests = true
autoexamples = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xui-core = { path = "./core" }
xui-macros = { path = "./macros" }
xui-widgets = { path = "./widgets" }

webrender_api = "0.61.0"
webrender = "0.61.0"
