[package]
name = "xui-core"
version = "0.0.0"
authors = ["강동윤 <kdy1997.dev@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/kdy1/xui.git"
description = "Rust everywhere"
edition = "2018"
keywords = ["xui", "gui", "ui"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xui-css = { path = "./css" }
xui-dom = { path = "./dom" }
stretch = "0.3.2"